fix z-index of modal window

--- a/about-cats/src/index.css
+++ b/about-cats/src/index.css
@@ -323,7 +323,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 3;
 
   display: none;
 
